package app.entities;

public class CustomerInformation {
}
