package app.entities;

public class Dimensions {
}
